# Shared-Memory

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.c  common.h  receiver.c  receiver_simple.c  receiver_test.c  sender.c  sender_simple  sender_simple.c  sender_test.c  sharedMemory.h
SharedMem Gruppe 7/bsp3_grp7/: Makefile  datah.c  datah.h  doxygen.dcf  empfaenger.c  sender.c
